# tonic-template

./: Cargo.toml  build.rs
src/: main.rs  protos.rs
src/protos/: api.proto
