[package]
name = "tonic-template"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "^0"
tonic = "^0"
tonic-web = "^0"
tokio = { version = "^1.16", features = ["rt-multi-thread"] }
tracing = "^0"
thiserror = "^1.0"

[build-dependencies]
tonic-build = "^0"
